index file updated.

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <h2>DIA is GREAT!!! Welcome to the HTML Translator Service.</h2>
     <div id="drop_zone">Drag and drop your HTML file here</div>
     <!-- Add this div to display the translated content -->
-    <div id="translated_content"></div
+    <div id="translated_content"></div>
     <script>
         let dropZone = document.getElementById('drop_zone');
 
