--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
     <div class="content-container">
         <!-- All your content goes here -->
             <h2>DIA is GREAT!!!</h2>
-            <h2>Proof of Concept for Translation of PDF, TXT, DOC, and PPT Files Using AI Integration.</h2>
+            <h2>Proof of Concept for Translation of PDF and TXT Files Using AI Integration.</h2>
             <div id="drop_zone">Drag and drop your PDF file here</div>
             <div id="file_name">No file selected</div>
             <h3 class="translated-header">Translated Content:</h3>
