--- a/templates/index.html
+++ b/templates/index.html
@@ -72,18 +72,24 @@
 <body>
     <div class="content-container">
         <!-- All your content goes here -->
-            <!-- <h2>DIA is GREAT!!! Do you Agree?</h2> -->
             <h1 class="centered-title">DIA</h1>
             <h2>Proof of Concept for AI-Powered Translation</h2>
-            <!-- <div id="drop_zone">Drag and drop your PDF file here</div> -->
             
             <!-- adding a text form for user input -->
             <form id="textInputForm">
                 <textarea id="text_input" name="text_input" rows="10" placeholder="Enter your text here..."></textarea><br>
+                <label for="language">Select language:</label>
+                <select id="language" name="language">
+                    <option value="en">English</option>
+                    <option value="es">Spanish</option>
+                    <option value="fr">French</option>
+                    <option value="fi">Finnish</option>
+                    <option value="ku">Kurdish</option> <!-- Adjust the value based on the code supported by your service -->
+                    <option value="pl">Polish</option>
+                </select><br>
                 <input type="submit" value="Translate Text">
             </form>
 
-            <!-- <div id="file_name">No file selected</div> -->
             <h3 class="translated-header">Translated by Azure AI Translator</h3>
             <div id="translated_content"></div>
             <button id="copyButton">Copy to Clipboard</button>
@@ -125,6 +131,7 @@
     document.getElementById('textInputForm').onsubmit = function(e) {
         e.preventDefault(); // Prevent default form submission
         const textInput = document.getElementById('text_input').value;
+        const targetLanguage = document.getElementById('language').value;
         
         // Show the spinner
         document.getElementById('loadingSpinner').style.display = 'block';
@@ -136,6 +143,7 @@
             },
             body: JSON.stringify({
             text: textInput,
+            language: targetLanguage,
             table_name: "TranslatedDocuments" 
         }),
         })
