The Azure AI translation was renamed to Model A for a double-blind test.

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,8 +89,8 @@
                 </select><br>
                 <input type="submit" value="Translate Text">
             </form>
-
-            <h3 class="translated-header">Translated by Azure AI Translator</h3>
+            <!-- I am going to call Azure AI translator Model A -->
+            <h3 class="translated-header">Translated by Model A</h3>
             <div id="translated_content"></div>
             <button id="copyButton">Copy to Clipboard</button>
             <div id="feedback_form">
